[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "extract vector images from pdf's"
authors = ["vaibhavsingh-materialplus <Vaibhav.Singh@materialplus.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fitz = "0.0.1.dev2"
gradio = "4.42.0"
matplotlib = "3.9.2"
numpy = "2.1.0"
opencv-python = "4.10.0.84"
pymupdf = "1.24.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
